--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Seu Nome | Portfólio</title>
+  <title>Vinícius Miranda| Portfólio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +19,7 @@
     <h2>Habilidades</h2>
 
     <div class="skills">
-      <!-- Basta duplicar um bloco para adicionar novas linguagens -->
+      <!-- Section -->
       <span>HTML</span>
       <span>CSS</span>
       <span>JavaScript</span>
