Update portfolio details and structure

--- a/index.html
+++ b/index.html
@@ -2,53 +2,58 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Vinícius Miranda| Portfólio</title>
+  <title>Seu Nome | Portfólio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <!-- HERO -->
-  <header class="hero">
-    <h1>Seu Nome</h1>
-    <p>Desenvolvedor | Criador | Programador</p>
-  </header>
+  <main class="container">
 
-  <!-- HABILIDADES -->
-  <section class="section">
-    <h2>Habilidades</h2>
+    <!-- APRESENTAÇÃO -->
+    <section class="hero">
+      <h1>Seu Nome</h1>
+      <p>Desenvolvedor focado em criar experiências digitais elegantes</p>
+    </section>
 
-    <div class="skills">
-      <!-- Section -->
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
-      <span>Python</span>
-    </div>
-  </section>
+    <!-- HABILIDADES -->
+    <section class="block">
+      <h2>Habilidades</h2>
 
-  <!-- PROJETOS -->
-  <section class="section">
-    <h2>Projetos</h2>
-
-    <div class="projects">
-      <!-- CARD DE PROJETO -->
-      <div class="project-card">
-        <h3>Nome do Projeto</h3>
-        <p>Breve descrição do projeto.</p>
-        <a href="#" target="_blank">Ver Projeto</a>
+      <div class="skills">
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">Python</div>
       </div>
+    </section>
 
-      <!-- DUPLIQUE ESTE BLOCO PARA NOVOS PROJETOS -->
-    </div>
-  </section>
+    <!-- PROJETOS -->
+    <section class="block">
+      <h2>Projetos</h2>
 
-  <!-- CONTATO -->
-  <section class="section contact">
-    <h2>Contato</h2>
-    <p>Email: seuemail@email.com</p>
-    <p>GitHub: github.com/seuusuario</p>
-  </section>
+      <div class="projects">
+
+        <article class="project">
+          <h3>Projeto Exemplo</h3>
+          <p>Aplicação moderna focada em performance e design limpo.</p>
+          <a href="#" target="_blank">Ver projeto →</a>
+        </article>
+
+        <!-- DUPLIQUE ESSE BLOCO PARA NOVOS PROJETOS -->
+
+      </div>
+    </section>
+
+    <!-- CONTATO -->
+    <section class="block contact">
+      <h2>Contato</h2>
+      <p>📧 seuemail@email.com</p>
+      <p>💻 github.com/seuusuario</p>
+    </section>
+
+  </main>
 
 </body>
 </html>
